Bug 1528317 - Return NS_ERROR_NET_HTTP2_SENT_GOAWAY only when we have a protocol error. r=valentin a=lizzard

In bug 1050329 we have introduced a new error and an error page to show that there is a h2 protocol error. The problem is that we show that error when we close a h2 connection for any reason, like a network timeout. Also Http2Session::SessionError does not return NS_ERROR_ILLEGAL_VALUE error but NS_ERROR_NET_HTTP2_SENT_GOAWAY.

Differential Revision: https://phabricator.services.mozilla.com/D22525

--HG--
extra : source : 3e844ef9583bd261dfd8ddcab6c9e04cc1bc56ca